--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@babel/core": "^7.18.10",
         "@babel/preset-env": "^7.18.10",
         "@babel/preset-react": "^7.18.6",
+        "antd": "^5.2.3",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
         "file-loader": "^6.2.0",
