--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.3",
+        "axios": "^1.3.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.36.1",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.1",
         "react-toastify": "^9.1.1",
+        "redux": "^4.2.1",
+        "redux-saga": "^1.2.2",
         "use-local-storage": "^2.3.6"
     },
     "devDependencies": {
