--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-RESOURCE_URL = "http://ec2-18-181-190-3.ap-northeast-1.compute.amazonaws.com/"
+RESOURCE_URL = "http://ec2-18-181-190-3.ap-northeast-1.compute.amazonaws.com"
